...
    <ImageView
        android:layout_width="146dp"
        android:layout_height="166dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo_primary"
        app:layout_constraintBottom_toTopOf="@+id/textViewOrderConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuBarInsert"
        app:layout_constraintVertical_bias="1.0" />

...
