...
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/PickUpButton"
        android:layout_width="162dp"
        android:layout_height="69dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="Pick Up"
        android:textAllCaps="false"
...
