...
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodMenuButton"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/foodMenuButton"
        android:layout_width="162dp"
        android:layout_height="69dp"
...
